web/app/global.css
@import 'tailwindcss';
@import 'fumadocs-ui/css/neutral.css';
@import 'fumadocs-ui/css/preset.css';

@theme {
  --color-fd-primary: oklch(0.59 0.14 242);
  --color-fd-primary-foreground: oklch(0.98 0.01 237);
  --color-fd-accent: oklch(0.59 0.14 242);
  --color-fd-accent-foreground: oklch(0.98 0.01 237);
  --color-fd-ring: oklch(0.708 0 0);
}

.dark {
  --color-fd-background: oklch(0.145 0 0);
  --color-fd-foreground: oklch(0.985 0 0);
  --color-fd-card: oklch(0.205 0 0);
  --color-fd-card-foreground: oklch(0.985 0 0);
  --color-fd-muted: oklch(0.269 0 0);
  --color-fd-muted-foreground: oklch(0.708 0 0);
  --color-fd-border: oklch(1 0 0 / 10%);
  --color-fd-primary: oklch(0.68 0.15 237);
  --color-fd-primary-foreground: oklch(0.29 0.06 243);
  --color-fd-accent: oklch(0.68 0.15 237);
  --color-fd-accent-foreground: oklch(0.29 0.06 243);
  --color-fd-secondary: oklch(0.274 0.006 286.033);
  --color-fd-secondary-foreground: oklch(0.985 0 0);
  --color-fd-ring: oklch(0.556 0 0);
  --color-fd-popover: oklch(0.205 0 0);
  --color-fd-popover-foreground: oklch(0.985 0 0);
}

.dark #nd-sidebar {
  --color-fd-muted: oklch(0.23 0 0);
  --color-fd-secondary: oklch(0.25 0 0);
  --color-fd-muted-foreground: oklch(0.72 0 0);
}

